ios/openim_sdk_ffi.xcframework/ios-arm64/openim_sdk_ffi.framework/openim_sdk_ffi.h

extern void CreateGroup(char* operationID, char* groupReqInfo);
extern void JoinGroup(char* operationID, char* groupID, char* reqMsg, int32_t joinSource, char* ex);
extern void InviteUserToGroup(char* operationID, char* groupID, char* reason, char* userIDList);
extern void GetJoinedGroupList(char* operationID);
extern void getJoinedGroupListPage(char* operationID, int32_t offset, int32_t count);
extern void SearchGroups(char* operationID, char* searchParam);
extern void GetSpecifiedGroupsInfo(char* operationID, char* groupIDList);
extern void SetGroupInfo(char* operationID, char* groupInfo);
extern void GetGroupApplicationListAsRecipient(char* operationID, char* req);
extern void GetGroupApplicationListAsApplicant(char* operationID, char* req);
extern void AcceptGroupApplication(char* operationID, char* groupID, char* fromUserID, char* handleMsg);
extern void RefuseGroupApplication(char* operationID, char* groupID, char* fromUserID, char* handleMsg);
extern void GetGroupMemberList(char* operationID, char* groupID, int32_t filter, int32_t offset, int32_t count);
extern void GetSpecifiedGroupMembersInfo(char* operationID, char* groupID, char* userIDList);
extern void SearchGroupMembers(char* operationID, char* searchParam);
extern void SetGroupMemberInfo(char* operationID, char* groupMemberInfo);
extern void GetGroupMemberOwnerAndAdmin(char* operationID, char* groupID);
extern void GetGroupMemberListByJoinTimeFilter(char* operationID, char* groupID, int32_t offset, int32_t count, int64_t joinTimeBegin, int64_t joinTimeEnd, char* filterUserIDList);
extern void KickGroupMember(char* operationID, char* groupID, char* reason, char* userIDList);