lib/openim_ffi_bindings_generated.dart


  late final _CreateGroupPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('CreateGroup');
  late final _CreateGroup =
      _CreateGroupPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void JoinGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reqMsg,
    int joinSource,
    ffi.Pointer<ffi.Char> ex,
  ) {
    return _JoinGroup(operationID, groupID, reqMsg, joinSource, ex);
  }

  late final _JoinGroupPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('JoinGroup');
  late final _JoinGroup =
      _JoinGroupPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void InviteUserToGroup(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reason,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _InviteUserToGroup(operationID, groupID, reason, userIDList);
  }

  late final _InviteUserToGroupPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('InviteUserToGroup');
  late final _InviteUserToGroup =
      _InviteUserToGroupPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void GetJoinedGroupList(ffi.Pointer<ffi.Char> operationID) {
    return _GetJoinedGroupList(operationID);
  }

  late final _GetJoinedGroupListPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'GetJoinedGroupList',
      );
  late final _GetJoinedGroupList =
      _GetJoinedGroupListPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void getJoinedGroupListPage(
    ffi.Pointer<ffi.Char> operationID,
    int offset,
    int count,
  ) {
    return _getJoinedGroupListPage(operationID, offset, count);
  }

  late final _getJoinedGroupListPagePtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Int32, ffi.Int32)
    >
  >('getJoinedGroupListPage');
  late final _getJoinedGroupListPage =
      _getJoinedGroupListPagePtr
          .asFunction<void Function(ffi.Pointer<ffi.Char>, int, int)>();

  void SearchGroups(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchGroups(operationID, searchParam);
  }

  late final _SearchGroupsPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SearchGroups');
  late final _SearchGroups =
      _SearchGroupsPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetSpecifiedGroupsInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupIDList,
  ) {
    return _GetSpecifiedGroupsInfo(operationID, groupIDList);
  }

  late final _GetSpecifiedGroupsInfoPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetSpecifiedGroupsInfo');
  late final _GetSpecifiedGroupsInfo =
      _GetSpecifiedGroupsInfoPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void SetGroupInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupInfo,
  ) {
    return _SetGroupInfo(operationID, groupInfo);
  }

  late final _SetGroupInfoPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SetGroupInfo');
  late final _SetGroupInfo =
      _SetGroupInfoPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetGroupApplicationListAsRecipient(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> req,
  ) {
    return _GetGroupApplicationListAsRecipient(operationID, req);
  }

  late final _GetGroupApplicationListAsRecipientPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetGroupApplicationListAsRecipient');
  late final _GetGroupApplicationListAsRecipient =
      _GetGroupApplicationListAsRecipientPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetGroupApplicationListAsApplicant(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> req,
  ) {
    return _GetGroupApplicationListAsApplicant(operationID, req);
  }

  late final _GetGroupApplicationListAsApplicantPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetGroupApplicationListAsApplicant');
  late final _GetGroupApplicationListAsApplicant =
      _GetGroupApplicationListAsApplicantPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void AcceptGroupApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> fromUserID,
    ffi.Pointer<ffi.Char> handleMsg,
  ) {
    return _AcceptGroupApplication(operationID, groupID, fromUserID, handleMsg);
  }

  late final _AcceptGroupApplicationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('AcceptGroupApplication');
  late final _AcceptGroupApplication =
      _AcceptGroupApplicationPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void RefuseGroupApplication(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> fromUserID,
    ffi.Pointer<ffi.Char> handleMsg,
  ) {
    return _RefuseGroupApplication(operationID, groupID, fromUserID, handleMsg);
  }

  late final _RefuseGroupApplicationPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('RefuseGroupApplication');
  late final _RefuseGroupApplication =
      _RefuseGroupApplicationPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void GetGroupMemberList(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int filter,
    int offset,
    int count,
  ) {
    return _GetGroupMemberList(operationID, groupID, filter, offset, count);
  }

  late final _GetGroupMemberListPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Int32,
        ffi.Int32,
      )
    >
  >('GetGroupMemberList');
  late final _GetGroupMemberList =
      _GetGroupMemberListPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
        )
      >();

  void GetSpecifiedGroupMembersInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _GetSpecifiedGroupMembersInfo(operationID, groupID, userIDList);
  }

  late final _GetSpecifiedGroupMembersInfoPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('GetSpecifiedGroupMembersInfo');
  late final _GetSpecifiedGroupMembersInfo =
      _GetSpecifiedGroupMembersInfoPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void SearchGroupMembers(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> searchParam,
  ) {
    return _SearchGroupMembers(operationID, searchParam);
  }

  late final _SearchGroupMembersPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SearchGroupMembers');
  late final _SearchGroupMembers =
      _SearchGroupMembersPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void SetGroupMemberInfo(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupMemberInfo,
  ) {
    return _SetGroupMemberInfo(operationID, groupMemberInfo);
  }

  late final _SetGroupMemberInfoPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('SetGroupMemberInfo');
  late final _SetGroupMemberInfo =
      _SetGroupMemberInfoPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetGroupMemberOwnerAndAdmin(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
  ) {
    return _GetGroupMemberOwnerAndAdmin(operationID, groupID);
  }

  late final _GetGroupMemberOwnerAndAdminPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
    >
  >('GetGroupMemberOwnerAndAdmin');
  late final _GetGroupMemberOwnerAndAdmin =
      _GetGroupMemberOwnerAndAdminPtr.asFunction<
        void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
      >();

  void GetGroupMemberListByJoinTimeFilter(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    int offset,
    int count,
    int joinTimeBegin,
    int joinTimeEnd,
    ffi.Pointer<ffi.Char> filterUserIDList,
  ) {
    return _GetGroupMemberListByJoinTimeFilter(
      operationID,
      groupID,
      offset,
      count,
      joinTimeBegin,
      joinTimeEnd,
      filterUserIDList,
    );
  }

  late final _GetGroupMemberListByJoinTimeFilterPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Int32,
        ffi.Int32,
        ffi.Int64,
        ffi.Int64,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('GetGroupMemberListByJoinTimeFilter');
  late final _GetGroupMemberListByJoinTimeFilter =
      _GetGroupMemberListByJoinTimeFilterPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          int,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void KickGroupMember(
    ffi.Pointer<ffi.Char> operationID,
    ffi.Pointer<ffi.Char> groupID,
    ffi.Pointer<ffi.Char> reason,
    ffi.Pointer<ffi.Char> userIDList,
  ) {
    return _KickGroupMember(operationID, groupID, reason, userIDList);
  }

  late final _KickGroupMemberPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
        ffi.Pointer<ffi.Char>,
      )
    >
  >('KickGroupMember');
  late final _KickGroupMember =
      _KickGroupMemberPtr.asFunction<
        void Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();
